2008-04-19  Kolja Waschk <kawk>

   * src/tap/cable/usbblaster.c: clock() at highest possible rate
     using the byte shift mode for n>=8 (Thanks M. Banditt)
   * include/cmd.h, src/cmd/cmd.c, src/jtag.c: [ 1946331 ] command
     completion support (by Mike Frysinger)
   * configure.ac, acinclude.m4: [ 1946114 ] make AC_PROG_SED
     workaround sane (Mike Frysinger)
   * include/jtag.h, src/cmd/detect.c, src/tap/detect.c:
     [ 1946119 ] fixup relocatable jtag in detection (M.Frysinger)
   * src/cmd/frequency.c: ensure that cable is initialized. Fixes
     [ 1933736 ] "frequency" command segfaults without args

2008-04-19  Arnim Laeuger  <arniml@users.sourceforge.net>

   * src/bsdl/Makefile.am, src/svf/Makefile.am: ensure that
     bsdl_bison.h is generated prior to compiling bsdl_flex.c and
     bsdl_bison.c
     [ 1943435 ] fixup bsdl parallel build issue (part2)

2008-04-13  Kolja Waschk <kawk>

  * src/tap/parport/ftd2xx.c, src/tap/usbconn/libusb.c, src/lib/fclock.c,
    src/jtag.c, src/flash/amd_flash.c, src/flash/amd.c, src/flash/jedec.c,
    src/svf/svf.c, configure.ac, doc/UrJTAG.txt: Provide variants of
    usleep, frealtime, mkdir for [ 1838732 ] EXE built with MinGW

2008-04-11  Kolja Waschk <kawk>

   * src/bsdl/bsdl.c, src/tap/parport/ftd2xx.c, src/tap/parport/ftdi.c,
     src/tap/usbconn/libusb.c, src/lib/fclock.c, src/jtag.c:
     [ 1940323 ] OS X support for UrJTAG (by Ville Voipio)

2008-04-11  Arnim Laeuger  <arniml@users.sourceforge.net>

   * src/tap/parport/ftdi.c (ftdi_flush_output): removed unused variables

2008-04-11  Jie Zhang  <jie.zhang@analog.com>

   From Michael Hennerich <michael.hennerich@analog.com>
   * src/tap/parport/ftdi.c (ftdi_generic_open): Detect
     BFIN-UJTAG cable.
   * src/tap/cable.c (ft2232_bfin_ujtag_cable_driver): Declare.
     (cable_drivers): Add ft2232_bfin_ujtag_cable_driver.
   * src/tap/cable/ft2232.c (BIT_BFIN_UJTAG_nTRST,
     BIT_BFIN_UJTAG_nLED, BITMASK_BFIN_UJTAG_nTRST,