@@ -1,5 +1,8 @@
 2008-04-19  Kolja Waschk <kawk>
 
+   * src/flash/intel.c: Handle chips that support "Mitsubishi
+     standard/enhanced command set" just like Intel chips. Need
+     to do more research about the differences (if any) [1946559]
    * src/tap/cable/usbblaster.c: clock() at highest possible rate
      using the byte shift mode for n>=8 (Thanks M. Banditt)
    * include/cmd.h, src/cmd/cmd.c, src/jtag.c: [ 1946331 ] command
